# msc_thesis_work

./: .gitignore  README.md  requirements.txt
code/: graph_geometric_metrics_all.py  hyperparameter_search_ae.sh  hyperparameter_search_cgan.sh  notebook.ipynb  test_ensemble.py  test_transforms.py
code/models/: autoencoder_model.py  cgan_model.py  discriminator.py  generator.py  generator_monai.py
code/trains/: train.py
code/utils/: Data_augmentation_train_set.ipynb  copy_folder_remote_to_one_place.py  cumulative_optimization_cascade_HPsearch.py  data_augmentations_thesis.py  heatmap_ensemble_fold.py  image_metrics_challenges.py  images_utils.py  img_difference_maps.py  linear_regression.py  load_data.py  mae_per_zones.py  mask_ct_sct_to_docker.py  mha_decompressed.py  mha_to_nifti.py  one_vs_multi_region.py  plot_utils.py  remove_unnecessary.py  sample_size_80.py  statistic_ttest.py  total_segmentator_seg_ct.py  violin_plots_and_mean_std.py
code/validations/: best_model_ae.py  best_model_cgan.py  validation.py
evaluation/: .gitattributes  .gitmodules  Dockerfile  LICENSE  evaluate-local.py  evaluate.py  pyproject.toml  requirements.txt  segmentation_metrics.py  ts_utils.py
evaluation/output_hn/: metrics.json
evaluation_dose/: all_metrics.json  dose_calculations.py  dvh_graph.py  is_there_seg.py  mean_metrics_per_region.py  visualizing_plans.py
matlab_dose_calculation/: run_dose_calculations_for_all_regions.m
