[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acvl-utils>=0.2.5",
    "batchgeneratorsv2>=0.2.3",
    "dicom2nifti>=2.6.1",
    "dynamic-network-architectures>=0.3.1",
    "matplotlib>=3.10.3",
    "monai>=1.3.2",
    "nibabel>=5.3.2",
    "numpy>=2.2.6",
    "p-tqdm>=1.4.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.0",
    "torch>=2.7.0",
    "totalsegmentator>=2.2.1",
]
